// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrentTrackContainer just the app without redux when authorised user renders as expected 1`] = `
<Fragment>
  <Image
    as="img"
    className="jb-settings-toggle"
    floated="right"
    onClick={[Function]}
    rounded={true}
    size="mini"
    src="https://www.gravatar.com/avatar/hash123"
    title="John Doe"
    ui={true}
  />
  <Modal
    centered={true}
    closeIcon={true}
    closeOnDimmerClick={true}
    closeOnDocumentClick={false}
    dimmer="blurring"
    eventPool="Modal"
    onClose={[Function]}
    open={false}
    size="small"
  >
    <ModalHeader>
      Settings
    </ModalHeader>
    <ModalContent>
      <ModalDescription>
        <Form
          as="form"
        >
          <FormInput
            action={
              Object {
                "className": "jb-authenticate-button",
                "content": "Authenticated",
                "icon": "checkmark",
                "labelPosition": "right",
                "onClick": [Function],
              }
            }
            as={[Function]}
            control={[Function]}
            icon="user"
            iconPosition="left"
            label="Enter your USERNAME below"
            onChange={[Function]}
            placeholder="example: user123"
            size="massive"
            value="user123"
          />
          <Progress
            percent={100}
            success={true}
          >
            user123 is now logged in
          </Progress>
        </Form>
      </ModalDescription>
    </ModalContent>
  </Modal>
</Fragment>
`;

exports[`CurrentTrackContainer just the app without redux when authorised user renders the modal 1`] = `
<Fragment>
  <Image
    as="img"
    className="jb-settings-toggle"
    floated="right"
    onClick={[Function]}
    rounded={true}
    size="mini"
    src="https://www.gravatar.com/avatar/hash123"
    title="John Doe"
    ui={true}
  />
  <Modal
    centered={true}
    closeIcon={true}
    closeOnDimmerClick={true}
    closeOnDocumentClick={false}
    dimmer="blurring"
    eventPool="Modal"
    onClose={[Function]}
    open={false}
    size="small"
  >
    <ModalHeader>
      Settings
    </ModalHeader>
    <ModalContent>
      <ModalDescription>
        <Form
          as="form"
        >
          <FormInput
            action={
              Object {
                "className": "jb-authenticate-button",
                "content": "Authenticated",
                "icon": "checkmark",
                "labelPosition": "right",
                "onClick": [Function],
              }
            }
            as={[Function]}
            control={[Function]}
            icon="user"
            iconPosition="left"
            label="Enter your USERNAME below"
            onChange={[Function]}
            placeholder="example: user123"
            size="massive"
            value="user123"
          />
          <Progress
            percent={100}
            success={true}
          >
            user123 is now logged in
          </Progress>
        </Form>
      </ModalDescription>
    </ModalContent>
  </Modal>
</Fragment>
`;

exports[`CurrentTrackContainer just the app without redux when nonauthorised user renders as expected 1`] = `
<Fragment>
  <Button
    as="button"
    className="jb-settings-toggle"
    floated="right"
    icon="user"
    onClick={[Function]}
  />
  <Modal
    centered={true}
    closeIcon={true}
    closeOnDimmerClick={true}
    closeOnDocumentClick={false}
    dimmer="blurring"
    eventPool="Modal"
    onClose={[Function]}
    open={false}
    size="small"
  >
    <ModalHeader>
      Settings
    </ModalHeader>
    <ModalContent>
      <ModalDescription>
        <Form
          as="form"
        >
          <FormInput
            action={
              Object {
                "className": "jb-authenticate-button",
                "content": "Click to validate",
                "icon": "checkmark",
                "labelPosition": "right",
                "onClick": [Function],
              }
            }
            as={[Function]}
            control={[Function]}
            icon="user"
            iconPosition="left"
            label="Enter your USERNAME below"
            onChange={[Function]}
            placeholder="example: user123"
            size="massive"
            value=""
          />
          <Progress
            error={true}
            percent={100}
          >
            Unknown User!
          </Progress>
        </Form>
      </ModalDescription>
    </ModalContent>
  </Modal>
</Fragment>
`;

exports[`CurrentTrackContainer render the settings modal open renders as expected 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Settings)>
    <Settings
      dispatch={[Function]}
      settings={
        Object {
          "open": true,
        }
      }
    >
      <Button
        as="button"
        className="jb-settings-toggle"
        floated="right"
        icon="user"
        onClick={[Function]}
      >
        <button
          className="ui icon right floated button jb-settings-toggle"
          onClick={[Function]}
        >
          <Icon
            as="i"
            name="user"
          >
            <i
              aria-hidden="true"
              className="user icon"
            />
          </Icon>
        </button>
      </Button>
      <Modal
        centered={true}
        closeIcon={true}
        closeOnDimmerClick={true}
        closeOnDocumentClick={false}
        dimmer="blurring"
        eventPool="Modal"
        onClose={[Function]}
        open={true}
        size="small"
      >
        <Portal
          closeOnDocumentClick={false}
          closeOnEscape={true}
          eventPool="Modal"
          mountNode={
            <body
              class="dimmable dimmed blurring"
            >
              <div
                class="ui page modals dimmer transition visible active"
                style="display: flex;"
              >
                <div
                  class="ui small modal transition visible active"
                >
                  <i
                    aria-hidden="true"
                    class="close icon"
                  />
                  <div
                    class="header"
                  >
                    Settings
                  </div>
                  <div
                    class="content"
                  >
                    <div
                      class="description"
                    >
                      <form
                        class="ui form"
                      >
                        <div
                          class="field"
                        >
                          <label>
                            Enter your USERNAME below
                          </label>
                          <div
                            class="ui massive action left icon input"
                          >
                            <input
                              placeholder="example: user123"
                              type="text"
                              value=""
                            />
                            <i
                              aria-hidden="true"
                              class="user icon"
                            />
                            <button
                              class="ui icon right labeled button jb-authenticate-button"
                            >
                              <i
                                aria-hidden="true"
                                class="checkmark icon"
                              />
                              Click to validate
                            </button>
                          </div>
                        </div>
                        <div
                          class="ui error progress"
                          data-percent="100"
                        >
                          <div
                            class="bar"
                            style="width: 100%;"
                          />
                          <div
                            class="label"
                          >
                            Unknown User!
                          </div>
                        </div>
                      </form>
                    </div>
                  </div>
                </div>
              </div>
            </body>
          }
          onClose={[Function]}
          onMount={[Function]}
          onOpen={[Function]}
          onUnmount={[Function]}
          open={true}
          openOnTriggerClick={true}
        >
          <PortalInner
            mountNode={
              <body
                class="dimmable dimmed blurring"
              >
                <div
                  class="ui page modals dimmer transition visible active"
                  style="display: flex;"
                >
                  <div
                    class="ui small modal transition visible active"
                  >
                    <i
                      aria-hidden="true"
                      class="close icon"
                    />
                    <div
                      class="header"
                    >
                      Settings
                    </div>
                    <div
                      class="content"
                    >
                      <div
                        class="description"
                      >
                        <form
                          class="ui form"
                        >
                          <div
                            class="field"
                          >
                            <label>
                              Enter your USERNAME below
                            </label>
                            <div
                              class="ui massive action left icon input"
                            >
                              <input
                                placeholder="example: user123"
                                type="text"
                                value=""
                              />
                              <i
                                aria-hidden="true"
                                class="user icon"
                              />
                              <button
                                class="ui icon right labeled button jb-authenticate-button"
                              >
                                <i
                                  aria-hidden="true"
                                  class="checkmark icon"
                                />
                                Click to validate
                              </button>
                            </div>
                          </div>
                          <div
                            class="ui error progress"
                            data-percent="100"
                          >
                            <div
                              class="bar"
                              style="width: 100%;"
                            />
                            <div
                              class="label"
                            >
                              Unknown User!
                            </div>
                          </div>
                        </form>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
            onMount={[Function]}
            onUnmount={[Function]}
          >
            <Portal
              containerInfo={
                <body
                  class="dimmable dimmed blurring"
                >
                  <div
                    class="ui page modals dimmer transition visible active"
                    style="display: flex;"
                  >
                    <div
                      class="ui small modal transition visible active"
                    >
                      <i
                        aria-hidden="true"
                        class="close icon"
                      />
                      <div
                        class="header"
                      >
                        Settings
                      </div>
                      <div
                        class="content"
                      >
                        <div
                          class="description"
                        >
                          <form
                            class="ui form"
                          >
                            <div
                              class="field"
                            >
                              <label>
                                Enter your USERNAME below
                              </label>
                              <div
                                class="ui massive action left icon input"
                              >
                                <input
                                  placeholder="example: user123"
                                  type="text"
                                  value=""
                                />
                                <i
                                  aria-hidden="true"
                                  class="user icon"
                                />
                                <button
                                  class="ui icon right labeled button jb-authenticate-button"
                                >
                                  <i
                                    aria-hidden="true"
                                    class="checkmark icon"
                                  />
                                  Click to validate
                                </button>
                              </div>
                            </div>
                            <div
                              class="ui error progress"
                              data-percent="100"
                            >
                              <div
                                class="bar"
                                style="width: 100%;"
                              />
                              <div
                                class="label"
                              >
                                Unknown User!
                              </div>
                            </div>
                          </form>
                        </div>
                      </div>
                    </div>
                  </div>
                </body>
              }
            >
              <Ref
                innerRef={[Function]}
              >
                <div
                  className="ui page modals dimmer transition visible active"
                >
                  <Ref
                    innerRef={[Function]}
                  >
                    <div
                      className="ui small modal transition visible active"
                      style={
                        Object {
                          "marginTop": null,
                        }
                      }
                    >
                      <MountNode
                        className="dimmable dimmed blurring"
                      />
                      <Icon
                        as="i"
                        key="close"
                        name="close"
                        onClick={[Function]}
                      >
                        <i
                          aria-hidden="true"
                          className="close icon"
                          onClick={[Function]}
                        />
                      </Icon>
                      <ModalHeader>
                        <div
                          className="header"
                        >
                          Settings
                        </div>
                      </ModalHeader>
                      <ModalContent>
                        <div
                          className="content"
                        >
                          <ModalDescription>
                            <div
                              className="description"
                            >
                              <Form
                                as="form"
                              >
                                <form
                                  className="ui form"
                                  onSubmit={[Function]}
                                >
                                  <FormInput
                                    action={
                                      Object {
                                        "className": "jb-authenticate-button",
                                        "content": "Click to validate",
                                        "icon": "checkmark",
                                        "labelPosition": "right",
                                        "onClick": [Function],
                                      }
                                    }
                                    as={[Function]}
                                    control={[Function]}
                                    icon="user"
                                    iconPosition="left"
                                    label="Enter your USERNAME below"
                                    onChange={[Function]}
                                    placeholder="example: user123"
                                    size="massive"
                                    value=""
                                  >
                                    <FormField
                                      action={
                                        Object {
                                          "className": "jb-authenticate-button",
                                          "content": "Click to validate",
                                          "icon": "checkmark",
                                          "labelPosition": "right",
                                          "onClick": [Function],
                                        }
                                      }
                                      control={[Function]}
                                      icon="user"
                                      iconPosition="left"
                                      label="Enter your USERNAME below"
                                      onChange={[Function]}
                                      placeholder="example: user123"
                                      size="massive"
                                      value=""
                                    >
                                      <div
                                        className="field"
                                      >
                                        <label>
                                          Enter your USERNAME below
                                        </label>
                                        <Input
                                          action={
                                            Object {
                                              "className": "jb-authenticate-button",
                                              "content": "Click to validate",
                                              "icon": "checkmark",
                                              "labelPosition": "right",
                                              "onClick": [Function],
                                            }
                                          }
                                          icon="user"
                                          iconPosition="left"
                                          onChange={[Function]}
                                          placeholder="example: user123"
                                          size="massive"
                                          type="text"
                                          value=""
                                        >
                                          <div
                                            className="ui massive action left icon input"
                                          >
                                            <input
                                              onChange={[Function]}
                                              placeholder="example: user123"
                                              type="text"
                                              value=""
                                            />
                                            <Icon
                                              as="i"
                                              name="user"
                                            >
                                              <i
                                                aria-hidden="true"
                                                className="user icon"
                                              />
                                            </Icon>
                                            <Button
                                              as="button"
                                              className="jb-authenticate-button"
                                              content="Click to validate"
                                              icon="checkmark"
                                              labelPosition="right"
                                              onClick={[Function]}
                                            >
                                              <button
                                                className="ui icon right labeled button jb-authenticate-button"
                                                onClick={[Function]}
                                              >
                                                <Icon
                                                  as="i"
                                                  name="checkmark"
                                                >
                                                  <i
                                                    aria-hidden="true"
                                                    className="checkmark icon"
                                                  />
                                                </Icon>
                                                Click to validate
                                              </button>
                                            </Button>
                                          </div>
                                        </Input>
                                      </div>
                                    </FormField>
                                  </FormInput>
                                  <Progress
                                    error={true}
                                    percent={100}
                                  >
                                    <div
                                      className="ui error progress"
                                      data-percent={100}
                                    >
                                      <div
                                        className="bar"
                                        style={
                                          Object {
                                            "width": "100%",
                                          }
                                        }
                                      />
                                      <div
                                        className="label"
                                      >
                                        Unknown User!
                                      </div>
                                    </div>
                                  </Progress>
                                </form>
                              </Form>
                            </div>
                          </ModalDescription>
                        </div>
                      </ModalContent>
                    </div>
                  </Ref>
                </div>
              </Ref>
            </Portal>
          </PortalInner>
        </Portal>
      </Modal>
    </Settings>
  </Connect(Settings)>
</Provider>
`;
